--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,97 @@
-.idea
-.vscode
+# Git and version control
 .git
 .gitignore
+.github
+
+# Documentation
+*.md
+docs/
+DOCKER_SETUP.md
+DOCKER_UPDATES_SUMMARY.md
+
+# IDE and editor files
+.vscode/
+.cursor/
+.claude/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs and temporary files
+*.log
+logs/
+tmp/
+temp/
+
+# Build artifacts
+bin/
+dist/
+build/
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Test files
+*_test.go
+test/
+tests/
+
+# Docker files (we don't need to copy these into the container)
+docker/
+docker-compose*.yml
+Dockerfile*
+
+# Development files
+.air.toml
 .env
 .env.local
-.env.development
-.env.test
-.env.production
-docker
+.env.*.local
+
+# Node.js (if any)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python (if any)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+
+# Go specific
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Archive files
+*.tar
+*.tar.gz
+*.zip
+*.rar
+*.7z
